// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders and redirects when loged 1`] = `
<div>
  <div
    class="makeStyles-root-8"
  >
    <header
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary MuiPaper-elevation4"
      style="background: rgb(28, 28, 28);"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
      >
        <h6
          class="MuiTypography-root makeStyles-title-10 MuiTypography-h6"
        >
          <a
            class="makeStyles-link-11"
            href="/inicio"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Inicio
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </a>
          <a
            class="makeStyles-link-11"
            href="/proyectos"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Proyectos
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </a>
          <a
            class="makeStyles-link-11"
            href="/personas"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Personas
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </a>
          <a
            class="makeStyles-link-11"
            href="/administradores"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Administradores
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </a>
        </h6>
        <button
          aria-controls="menu-appbar"
          aria-haspopup="true"
          aria-label="account of current user"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          data-testid="menu-perfil"
          tabindex="0"
          title="Configuración de la cuenta"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-mr5-13 css-i4bv87-MuiSvgIcon-root"
              data-testid="AccountCircleIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
              />
            </svg>
            fake@uid.com
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </header>
  </div>
</div>
`;

exports[`renders correctly unloged 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <header
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary MuiPaper-elevation4"
      style="background: rgb(28, 28, 28);"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
      >
        <h6
          class="MuiTypography-root makeStyles-title-3 MuiTypography-h6"
        >
          <a
            class="makeStyles-link-4"
            href="/inicio"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Inicio
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </a>
          <a
            class="makeStyles-link-4"
            href="/proyectos"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Proyectos
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </a>
          <a
            class="makeStyles-link-4"
            href="/personas"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Personas
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </a>
          <a
            class="makeStyles-link-4"
            href="/administradores"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Administradores
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </a>
        </h6>
        <button
          aria-controls="menu-appbar"
          aria-haspopup="true"
          aria-label="account of current user"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          data-testid="menu-perfil"
          tabindex="0"
          title="Configuración de la cuenta"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-mr5-6 css-i4bv87-MuiSvgIcon-root"
              data-testid="AccountCircleIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
              />
            </svg>
            Aún no inició sesión
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </header>
  </div>
</div>
`;
